# animation-lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
sources/: CMakeLists.txt
sources/animation-lib.test/: LogStoryboardEventHandler.cpp  LogStoryboardEventHandler.h  MainWindow.cpp  MainWindow.h  MainWindowAnimationEventHandler.cpp  MainWindowAnimationEventHandler.h  MainWindowVariableChangeHandler.cpp  MainWindowVariableChangeHandler.h  WindowAnimationEventHandler.cpp  WindowAnimationEventHandler.h  main.cpp
sources/animation-lib/include/anim/: Animation.h  AnimationManager.h  AnimationTimerEventHandler.h  AnimationVariable.h  IUnknownHelper.h  Storyboard.h  StoryboardEventHandler.h  TransitionLibrary.h  VariableChangeHandler.h  VariableIntegerChangeHandler.h
sources/animation-lib/include/anim/transition/: AccelerateDecelerate.h  Constant.h  Cubic.h  Discrete.h  Instantaneous.h  Linear.h  LinearFromSpeed.h  ParabolicFromAcceleration.h  Reversal.h  SinusoidalFromRange.h  SinusoidalFromVelocity.h  SmoothStop.h  Transition.h
sources/animation-lib/src/anim/: Animation.cpp  AnimationManager.cpp  AnimationTimerEventHandler.cpp  AnimationVariable.cpp  Storyboard.cpp  StoryboardEventHandler.cpp  TransitionLibrary.cpp  VariableChangeHandler.cpp  VariableIntegerChangeHandler.cpp
sources/animation-lib/src/anim/transition/: AccelerateDecelerate.cpp  Constant.cpp  Cubic.cpp  Discrete.cpp  Instantaneous.cpp  Linear.cpp  LinearFromSpeed.cpp  ParabolicFromAcceleration.cpp  Reversal.cpp  SinusoidalFromRange.cpp  SinusoidalFromVelocity.cpp  SmoothStop.cpp  Transition.cpp
